--- a/考研记录.md
+++ b/考研记录.md
@@ -37,6 +37,18 @@
 > + 下午: 上课 - 存储技术基础
 > + 晚上: 补课 - 存储技术基础
 
++ 英语
+  
+  + 背单词
+  
+    <img src="./考研记录.assets/315cdd98f52ab16e1db6d8cf910e306.jpg" alt="315cdd98f52ab16e1db6d8cf910e306" style="zoom:25%;" />
+  
++ 其他
+
+  + 明天上午就期中考试了, 狠狠复习编译原理
+
+    ![微信图片_20240423202132](./考研记录.assets/微信图片_20240423202132.png)
+
 ### 4.24 - Wed
 
 > :bell:**事件**
