--- a/考研记录.md
+++ b/考研记录.md
@@ -2,80 +2,22 @@
 
 > 记录考研每日完成的任务 进行一个打卡
 
-## 四月
+## 考研计划
 
-### 4.22 - Mon
-
-+ 数学
-  + 武忠祥 网课 第14讲 常微分方程
-  + 滚动复习 13讲 定积分应用
-  + 做题 ch3 定积分 捏猫猫的什么时候才能做完啊
-
-+ 英语
-  + 背单词
-
-    <img src="./考研记录.assets/a62c3bb3862f15da3b21356004fa48f.jpg" alt="a62c3bb3862f15da3b21356004fa48f" style="zoom:25%;" />
-
-  + 泛读
-
-    <img src="./考研记录.assets/image-20240422225346101.png" alt="image-20240422225346101" style="zoom:25%;" />
-
-+ 专业课
-
-  + 新课 ch5.1 + 5.2
-  + 做题 ch5.1 + 5.2
-  + 滚动复习 ch4
-
-+ 其他
-
-  + 编译原理复习 ch3 词法分析 + ch4 自顶向下的分析方法
-
-### :arrow_right: 4.23 - Tue
-
-> :bell:**事件**
->
-> + 下午: 上课 - 存储技术基础
-> + 晚上: 补课 - 存储技术基础
-
-+ 英语
-  
-  + 背单词
-  
-    <img src="./考研记录.assets/315cdd98f52ab16e1db6d8cf910e306.jpg" alt="315cdd98f52ab16e1db6d8cf910e306" style="zoom:25%;" />
-  
-+ 其他
-
-  + 明天上午就期中考试了, 狠狠复习编译原理
-
-    ![微信图片_20240423202132](./考研记录.assets/微信图片_20240423202132.png)
-
-### 4.24 - Wed
-
-> :bell:**事件**
->
-> + 上午: 上课 - 编译原理
-> + 上午: 答疑 - 编译原理
-> + 上午: 考试 - 编译原理
-
-### 4.29 - Mon
-
-> :bell:**事件**
->
-> + 下午: 出去玩
-
-----------------------
+ [考研计划.pdf](考研计划\考研计划.pdf) 
 
 ## 五月
 
-### 5.4 - Sat
+### 25号
 
-> :bell:**事件**
->
-> + 全天: 去漫展
+### 26号
 
-### 5.5 - Sun
+### 27号
 
-> :bell:**事件**
->
-> + 全天: 去看演唱会
+### 28号
 
+### 29号
+
+### 30号
+
+### 31号
