--- a/考研记录.md
+++ b/考研记录.md
@@ -20,3 +20,32 @@
 
 ### 5.31
 
+## 笔记存档
+
+### 数学
+
+#### 高数
+
+#### 线性代数
+
+1. 一轮-汤家凤-笔记
+   +  [第一章 行列式.pdf](资料存档\数学\线性代数\1. 一轮-汤家凤-笔记\ch1 行列式.pdf) 
+   +  第二章
+   +  第三章
+2. 红书1号错题
+
+#### 概率论
+
+### 英语
+
+### 专业课
+
+#### 数据结构
+
+#### 计算机组成原理
+
+#### 操作系统
+
+#### 计算机网络
+
+### 政治
