--- a/考研记录.md
+++ b/考研记录.md
@@ -4,48 +4,228 @@
 
 ## 考研计划
 
- [考研计划.pdf](考研计划\考研计划.pdf) 
-
-## 五月
-
-### 5.26
-
-### 5.27
-
-### 5.28
-
-### 5.29
-
-### 5.30
-
-### 5.31
-
-## 笔记存档
-
 ### 数学
-
-#### 高数
-
-#### 线性代数
-
-1. 一轮-汤家凤-笔记
-   +  [第一章 行列式.pdf](资料存档\数学\线性代数\1. 一轮-汤家凤-笔记\ch1 行列式.pdf) 
-   +  第二章
-   +  第三章
-2. 红书1号错题
-
-#### 概率论
 
 ### 英语
 
 ### 专业课
 
-#### 数据结构
+### 政治
 
-#### 计算机组成原理
+--------------------------
 
-#### 操作系统
+## 当前项目
 
-#### 计算机网络
++ ```mermaid
+  gantt
+      title 当天计划完成情况图
+      todayMarker stroke-width:5px,stroke:#0f0,opacity:0.5
+      todayMarker off
+      dateFormat X
+      axisFormat %s
+      section 高数
+      任务1-71%   : 0, 71
+      任务2-20%   : 0, 30
+      section 线性代数
+      任务1-100%   : 0, 100
+      任务2-50%   : 0, 50
+      section 概率论
+      任务1-20%   : 0, 20
+  ```
++ 高数
+  + 红书一轮
+  + 红书2轮
+  + 做题
+
++ 线性代数
+  + 网课
+  + 做题
+
++ 概率论
+  + 课
+  + 题
+
++ 数据结构
+  + 课
+  + 题
+  + riview
+
++ 英语
+  + 单词
+
+## 即将开启
+
++ 项目1
+
+  > **概述**
+  >
+  > 大概是概述
+  >
+  > **准备资料**
+  >
+  > - [ ] 准备1
+  > - [ ] 准备2
+
++ 项目2
+
+  > **概述**
+  >
+  > 大概是概述
+  >
+  > **准备资料**
+  >
+  > - [ ] 准备1
+  > - [ ] 准备2
+
++ 项目3
+
+  > **概述**
+  >
+  > 大概是概述
+  >
+  > **准备资料**
+  >
+  > - [ ] 准备1
+  > - [ ] 准备2
+
+## 每日记录
+
+
+
+### 日历
+
+> [五月](#每日记录-日历-五月)
+
+|     Mon     | Tue  | Wed  | Thu  | Fri  | Sat  | Sun  |
+| :---------: | :--: | :--: | :--: | :--: | :--: | :--: |
+|             |      |  1   |  2   |  3   |  4   |  5   |
+|      6      |  7   |  8   |  9   |  10  |  11  |  12  |
+|     13      |  14  |  15  |  16  |  17  |  18  |  19  |
+|     20      |  21  |  22  |  23  |  24  |  25  |  26  |
+| [27](#5.27) |  28  |  29  |  30  |  31  |      |      |
+
+> [六月](#每日记录-日历-六月)
+
+| Mon  | Tue  | Wed  | Thu  | Fri  | Sat  | Sun  |
+| :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+|      |      |      |      |      |  1   |  2   |
+|  3   |  4   |  5   |  6   |  7   |  8   |  9   |
+|  10  |  11  |  12  |  13  |  14  |  15  |  16  |
+|  17  |  18  |  19  |  20  |  21  |  22  |  23  |
+|  24  |  25  |  26  |  27  |  28  |  29  |  30  |
+
+> [七月](#每日记录-日历-七月)
+
+| Mon  | Tue  | Wed  | Thu  | Fri  | Sat  | Sun  |
+| :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+|  1   |  2   |  3   |  4   |  5   |  6   |  7   |
+|  8   |  9   |  10  |  11  |  12  |  13  |  14  |
+|  15  |  16  |  17  |  18  |  19  |  20  |  21  |
+|  22  |  23  |  24  |  25  |  26  |  27  |  28  |
+|  29  |  30  |  31  |      |      |      |      |
+
+> [八月](#每日记录-日历-八月)
+
+| Mon  | Tue  | Wed  | Thu  | Fri  | Sat  | Sun  |
+| :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+|      |      |      |  1   |  2   |  3   |  4   |
+|  5   |  6   |  7   |  8   |  9   |  10  |  11  |
+|  12  |  13  |  14  |  15  |  16  |  17  |  18  |
+|  19  |  20  |  21  |  22  |  23  |  24  |  25  |
+|  26  |  27  |  28  |  29  |  30  |  31  |      |
+
+> [九月](#每日记录-日历-九月)
+
+| Mon  | Tue  | Wed  | Thu  | Fri  | Sat  | Sun  |
+| :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+|      |      |      |      |      |      |  1   |
+|  2   |  3   |  4   |  5   |  6   |  7   |  8   |
+|  9   |  10  |  11  |  12  |  13  |  14  |  15  |
+|  16  |  17  |  18  |  19  |  20  |  21  |  22  |
+|  23  |  24  |  25  |  26  |  27  |  28  |  29  |
+|  30  |      |      |      |      |      |      |
+
+> [十月](#每日记录-日历-十月)
+
+| Mon  | Tue  | Wed  | Thu  | Fri  | Sat  | Sun  |
+| :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+|      |  1   |  2   |  3   |  4   |  5   |  6   |
+|  7   |  8   |  9   |  10  |  11  |  12  |  13  |
+|  14  |  15  |  16  |  17  |  18  |  19  |  20  |
+|  21  |  22  |  23  |  24  |  25  |  26  |  27  |
+|  28  |  29  |  30  |  31  |      |      |      |
+
+> [十一月](#每日记录-日历-十一月)
+
+| Mon  | Tue  | Wed  | Thu  | Fri  | Sat  | Sun  |
+| :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+|      |      |      |      |  1   |  2   |  3   |
+|  4   |  5   |  6   |  7   |  8   |  9   |  10  |
+|  11  |  12  |  13  |  14  |  15  |  16  |  17  |
+|  18  |  19  |  20  |  21  |  22  |  23  |  24  |
+|  25  |  26  |  27  |  28  |  29  |  30  |      |
+
+> [十二月](#每日记录-日历-十二月)
+
+| Mon  | Tue  | Wed  | Thu  | Fri  | Sat  | Sun  |
+| :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+|      |      |      |      |      |      |  1   |
+|  2   |  3   |  4   |  5   |  6   |  7   |  8   |
+|  9   |  10  |  11  |  12  |  13  |  14  |  15  |
+|  16  |  17  |  18  |  19  |  20  |  21  |  22  |
+|  23  |  24  |  25  |  26  |  27  |  28  |  29  |
+|  30  |  31  |      |      |      |      |      |
+
+### 计划
+
+**<span id="每日记录-日历-五月">五月</span>**
+
++ <span id="5.27">5.27 周一</span>
+
+  > 1. 当天计划
+  > 2. 计划完成情况
+  > 3. 总结
+  > 4. 资料存档
+
++ 5.28 周二
+
++ 5.29 周三
+
++ 5.30 周四
+
++ 5.31 周五
+
+**<span id="每日记录-日历-六月">六月</span>**
+
+**<span id="每日记录-日历-七月">七月</span>**
+
+**<span id="每日记录-日历-八月">八月</span>**
+
+**<span id="每日记录-日历-九月">九月</span>**
+
+**<span id="每日记录-日历-十月">十月</span>**
+
+**<span id="每日记录-日历-十一月">十一月</span>**
+
+**<span id="每日记录-日历-十二月">十二月</span>**
+
+------------------
+
+## 笔记存档
+
+### 数学
+
++ 高数
++ 线性代数
++ 概率论
+
+### 英语
+
+### 专业课
+
++ 数据结构
++ 计算机组成原理
++ 操作系统
++ 计算机网络
 
 ### 政治
