--- a/考研记录.md
+++ b/考研记录.md
@@ -176,16 +176,45 @@
 |  23  |  24  |  25  |  26  |  27  |  28  |  29  |
 |  30  |  31  |      |      |      |      |      |
 
-### 计划
+### 每日规划
 
 **<span id="每日记录-日历-五月">五月</span>**
 
 + <span id="5.27">5.27 周一</span>
 
   > 1. 当天计划
+  >
   > 2. 计划完成情况
-  > 3. 总结
-  > 4. 资料存档
+  >
+  >    ```mermaid
+  >    gantt
+  >        title 当天计划完成情况图
+  >        todayMarker stroke-width:5px,stroke:#0f0,opacity:0.5
+  >        todayMarker off
+  >        dateFormat X
+  >        axisFormat %s
+  >        section 高数
+  >        任务1-71%   : 0, 71
+  >        任务2-20%   : 0, 30
+  >        section 线性代数
+  >        任务1-100%   : 0, 100
+  >        任务2-50%   : 0, 50
+  >        section 概率论
+  >        任务1-20%   : 0, 20
+  >    ```
+  >
+  >    + 已完成
+  >    + 未完成
+  >
+  > 3. 总结/期待/评价/碎碎念
+  >
+  >    + 总结
+  >    + 期待
+  >    + 评价：★★★★★☆☆☆☆☆
+  >
+  > 4. 影像资料
+  >
+  > 
 
 + 5.28 周二
 
