--- a/模板.md
+++ b/模板.md
@@ -7,55 +7,35 @@
 >    ```mermaid
 >    gantt
 >        title 当天计划完成情况图
+>        todayMarker stroke-width:5px,stroke:#0f0,opacity:0.5
+>        todayMarker off
 >        dateFormat X
 >        axisFormat %s
->        
->        section 高数网课
->        71   : 0, 71
->        section 高数做题
->        36   : 0, 36
->        section 英语单词
->        34   : 0, 34
->        section 数据结构
->        9    : 0, 9
->        section 乱七八糟的
->        5    : 0, 5
->    
+>        section 高数
+>        任务1-71%   : 0, 71
+>        任务2-20%   : 0, 30
+>        section 线性代数
+>        任务1-100%   : 0, 100
+>        任务2-50%   : 0, 50
+>        section 概率论
+>        任务1-20%   : 0, 20
 >    ```
 >
 >    + 已完成
 >    + 未完成
 >
-> 3. 总结/期待/评价
+> 3. 总结/期待/评价/碎碎念
 >
->    | 总结 | 期待 | 评价 |
->    | ---- | ---- | ---- |
->    |      |      |      |
->
-> 
+>    + 总结
+>    + 期待
+>    + 评价：★★★★★☆☆☆☆☆
 >
 > 4. 影像资料
+>
+>    
+>
 
 
 
 [甘特图 | Mermaid 中文网 (nodejs.cn)](https://mermaid.nodejs.cn/syntax/gantt.html#milestones)
-
-```mermaid
-gantt
-    title 当天计划完成情况图
-    todayMarker stroke-width:5px,stroke:#0f0,opacity:0.5
-    todayMarker on
-    dateFormat X
-    axisFormat %s
-    section 高数网课
-    71   : 0, 71
-    section 高数做题
-    36   : 0, 36
-    section 英语单词
-    34   : 0, 34
-    section 数据结构
-    9    : 0, 9
-    section 乱七八糟的
-    5    : 0, 5
-```
 
